@@ -453,3 +453,4 @@ N(OP_AdventureStatsRequest),
 N(OP_AdventureStatsReply),
 N(OP_AdventureLeaderboardRequest),
 N(OP_AdventureLeaderboardReply),
+N(OP_SetStartCity),
