@@ -303,6 +303,7 @@ OP_DisciplineTimer=0x53c5		#Derision 2009
 OP_DisciplineUpdate=0x0000		#
 OP_BecomeCorpse=0x0000			#
 OP_LDoNButton=0x7eac			#
+OP_SetStartCity=0x7e91			#realityincarnate 6/25/09
 
 #Looting
 OP_LootRequest=0x36E3			#Trevius 02/16/09
