@@ -275,6 +275,7 @@ OP_Sacrifice=0x727a
 OP_KeyRing=0x68c4
 OP_ApplyPoison=0x0c2c
 OP_AugmentInfo=0x45ff		#RealityIncarnate 4/28/09
+OP_SetStartCity=0x41dc			#realityincarnate 6/25/09
 
 #bazaar trader stuff stuff:
 #become and buy from
