@@ -249,3 +249,4 @@
 	void Handle_OP_AdventureLeaderboardRequest(const EQApplicationPacket *app);	
 	void Handle_OP_RespawnWindow(const EQApplicationPacket *app);
 	void Handle_OP_GroupUpdate(const EQApplicationPacket *app);
+	void Handle_OP_SetStartCity(const EQApplicationPacket *app);
