@@ -117,7 +117,7 @@ public:
 	FACTION_VALUE CheckNPCFactionAlly(sint32 other_faction);
 	FACTION_VALUE GetReverseFactionCon(Mob* iOther);
 
-	void	GoToBind()	{ GMMove(org_x, org_y, org_z, org_heading); }
+	void	GoToBind(uint8 bindnum = 0)	{ GMMove(org_x, org_y, org_z, org_heading); }
 	void	Gate();
 
 	void	GetPetState(SpellBuff_Struct *buffs, int32 *items, char *name);
